# qft-nn

./: .gitignore  README.md  pyproject.toml
.github/workflows/: qa.yaml
dev_scripts/: format.sh  type_check.sh
experiments/sae_locality/: README.md  explore.ipynb  run.py  toy_model_config.yaml
qft_nn/: foo.py  ntk.py  sae.py  toy_model.py
qft_nn/nn/: base_config.py  lr_schedules.py  sae.py  toy_model.py
tests/: test_foo.py  test_nn.py  test_ntk.py  test_toy_model.py
